--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "neos-plugin",
     "name": "netlogix/rediscaches",
     "require": {
-        "neos/flow": "^4.0 || ^5.0"
+        "neos/flow": "^4.0 || ^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
