--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-    "description": "",
-    "type": "neos-plugin",
     "name": "netlogix/rediscaches",
+    "description": "CLI to flush all redis caches",
+    "license": "MIT",
+    "type": "neos-plugin",
     "require": {
         "neos/flow": "^4.0 || ^5.0 || ^6.0"
     },
