--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "type": "neos-plugin",
     "require": {
-        "neos/flow": "^4.0 || ^5.0 || ^6.0"
+        "neos/flow": "^4.0 || ^5.0 || ^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
